syntax = "proto3";

package user;

option go_package = "proto/user;proto";

// User message definition
message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

// Request and Response for GetUser
message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

// Request and Response for CreateUser
message CreateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message CreateUserResponse {
    string message = 1;
}

// Request and Response for DeleteUser
message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}

// gRPC service definition
service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}